--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,8 +1,10 @@
-<html>
-<body>
-    <h1>Movie Ratings</h1>
-    {% for user in users %}
-    <h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
-    {% endfor %}
-</body>
-</html>
+{% extends 'master.html' %}
+
+{% block body %}
+
+<h1>Movie Ratings</h1>
+{% for user in users %}
+<h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
+{% endfor %}
+
+{% endblock %}
