can now click on a user view list of movies rated and movie ratings themselves; when logged in can update or add rating.

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -4,7 +4,7 @@
 <div id="users_list">
     <h1>Movie Ratings</h1>
     {% for user in users %}
-    <h2>User {{ user.id }}, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
+    <h2><a href="/user/{{ user.id }}">User {{user.id}}</a>, age {{ user.age }} has {{ user.ratings|length }} ratings</h2>
     {% endfor %}
 </div>
 <button id="showmore">Show 10 More</button>
