--- a/templates/movie.html
+++ b/templates/movie.html
@@ -7,6 +7,11 @@
         {% if user_rating %}
         <h3>You gave this movie a rating of {{ user_rating.rating }}</h3>
         {% endif %}
+    {% if prediction %}
+    <h3>We predict you will rate this movie {{prediction}}.</h3>
+        {% endif %}
+    <p></p>
+    <h3>Says the Eye: {{ beratement }}</h3>
     <form method="POST">
         <input type="text" class="form-control" style="width:200px" placeholder="add or change a rating" name="rating">
         <input type="submit" class="btn btn-primary btn-sm" style="margin-top:10px;"value="Submit">
